# model_cultural_comp

./: .gitignore  README.md  pyproject.toml
app/: chinese_llm_data_gen.py  country_meta.py  culture_map.py  culture_map_post_hoc.py  dev.py  llm_data_gen.py  main.py  map.py  map_simple.py  qn_classes.py  qns.py  region_assign_llm.py
modelfiles/: aquilachat2  deepseek  xuan
notebooks/: 1-ivs.ipynb  10-results-view.ipynb  2-pca.ipynb  3-UMAP.ipynb  4-country_metadata.ipynb  5-decison-boundary.ipynb  6-model_answers.ipynb  7-pca-db.ipynb  8-llm-collate.ipynb  9-pca-llm.ipynb  dev.ipynb  graph-visualization.ipynb  parquet_viewer.ipynb
pipeline/: pg.py  run.py
