[tool.poetry]
name = "app"
version = "0.1.0"
description = "Model Comparison"
authors = ["shavvimal <shavhugan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.1"
jupyter = "^1.0.0"
pyreadstat = "^1.2.7"
scikit-learn = "^1.5.1"
factor-analyzer = "^0.5.1"
umap-learn = "^0.5.6"
pandas = "^2.2.2"
numpy = "^2.0.0"
pydantic = "^2.8.2"
ollama = "^0.2.1"
huggingface-hub = "^0.23.5"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
